# INetCEP

./: .gitignore  CONTRIBUTING.md  Extensions.md  ProjectStatus.md  Readme.md  Simple NFN Query Kernel  Troubleshooting.md  VMS-GENI.cfg  improvements  shutdownLocally.sh
Evaluation_Thesis/: AccuracyDataFrameUserland.pkl  EvalTable.xlsx  INetCEP_Evaluation.ipynb  InterestPackets_Overall.pkl  InterestPackets_PerMinute.pkl  InterestPackets_Queries.pkl  LatencyEvaluation.ipynb  LatencyHop_PerMinute.pkl  Latency_ConcurrentWindows.pkl  Latency_WindowApproaches.pkl  Pie_chart_data_Q3.pkl  Pie_chart_data_Q3_C.pkl  PingData.pkl  README.md  ThroughputEvaluation.ipynb  Throughput_PerMinute.pkl  WindowOperatorEvaluation.ipynb  data.pkl  dataKernel.pkl  latDatFinal.pkl
LatencyTests/: commands  createFillerContent.sh
ShellTests/: Tests.sh
Test scripts/: ConstantPinging.sh  ConstantPingingKernel.sh  ConstantPingingTest.sh  ConstantPingingTestKernel.sh  Dealing with UDP Problem  Local Query Placement with Filter and Window  Notes on eval  Running Linux Kernel Version.txt  Test für Konstanten Datastream  Throughput.sh  ThroughputTest.sh  TroughputTest  TroughputTest.sh  TroughputTestKernel.sh  Unified Communication layer test  builtin ops  makeSensor.sh  makeSensorFromFile.sh  nohup.out  timeTest  (+9 more)
ccn-lite/src/ccnl-sensor/: CMakeLists.txt
ccn-lite/src/ccnl-sensor/include/: ccn-lite-sensor.h  randomGPS.h  randomPLUG.h  randomSURVIVORS.h  randomVICTIMS.h
ccn-lite/src/ccnl-sensor/src/: ccn-lite-sensor.c  randomGPS.c  randomPLUG.c  randomPLUG.cpp  randomSURVIVORS.c  randomVICTIMS.c
(+929 files in other folders)
